--- a/html/jqueryhw.html
+++ b/html/jqueryhw.html
@@ -12,32 +12,35 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
+            <li class="navbar-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
             <li class="navbar-item" id="nav1">
                 <a href="#" class="nav-link">Selectors</a>
             </li>
             <li class="navbar-item" id="nav2">
                 <a href="#" class="nav-link">Events</a>
             </li>
-            <li class="navbar-item">
-                <a href="hide-show.html" class="nav-link">Hide/Show</a>
+            <li class="navbar-item" id="nav3">
+                <a href="#" class="nav-link">Hide/Show</a>
             </li>
             <li class="navbar-item">
-                <a href="fade.html" class="nav-link">Fade</a>
+                <a href="#" class="nav-link">Fade</a>
             </li>
             <li class="navbar-item">
-                <a href="slide.html" class="nav-link">Slide</a>
+                <a href="#" class="nav-link">Slide</a>
             </li>
             <li class="navbar-item">
-                <a href="animate.html" class="nav-link">Animate</a>
+                <a href="#" class="nav-link">Animate</a>
             </li>
             <li class="navbar-item">
-                <a href="stop.html" class="nav-link">stop()</a>
+                <a href="#" class="nav-link">stop()</a>
             </li>
             <li class="navbar-item">
-                <a href="callback.html" class="nav-link">Callback</a>
+                <a href="#" class="nav-link">Callback</a>
             </li>
             <li class="navbar-item">
-                <a href="chaining.html" class="nav-link">Chaining</a>
+                <a href="#" class="nav-link">Chaining</a>
             </li>
         </ul>
     </nav>
@@ -57,6 +60,10 @@
         </div>
         <button id="hide">Hide</button>
         <button id="show">Show</button>
+        <h6 id="h61"> Mouse Up </h6>
+        <h6 id="h62"> Mouse Down </h6>
+        <h6 id="h63"> Hover </h6>
+
     </div>
 
 </body>
